// ignore_for_file: non_constant_identifier_names

import 'package:mg_common_game/l10n/app_localizations.dart';

export 'package:mg_common_game/l10n/localization.dart';

extension MG0011Localizations on AppLocalizations {
  String get notification_rewardslength_rewards_claimed => 'Rewards claimed';
  String get ui_general_friend_forest_visit => 'Friend forest visit';
  String get ui_general_guild_war => 'Guild';
  String get ui_general_last_active_5m_ago => 'Last active 5m ago';
  String get ui_general_battle_pass => 'Pass';
  String get ui_general_last_active_1h_ago => 'Last active 1h ago';
}